# Studio-AI

./: .gitignore  .importlinter  AUDIT_08_tts_real.md  AUDIT_10_platform_real.md  DOCUMENTATION.md  README.md  _source_xtts_studio_CHANGES.diff  git_connect_push.bat  install.bat  pyproject.toml  run-py.bat  run_gui.py  run_log_20260719_132131.txt
REPORT/: AUDIT_06_ui_fixes.md  AUDIT_07_i18n.md  AUDIT_11_env_wizard.md  AUDIT_12_experience.md  AUDIT_14_no_torch_in_gui.md  AUDIT_15_access_violation.md  AUDIT_16_startup_crash_investigation.md  AUDIT_17_qt_handler_dangling_pointer.md  DOCUMENTATION_stage12.md
TS/: AUDIT_01_surface.md  AUDIT_02_detailed.md  AUDIT_03_stage_a.md  AUDIT_04_final.md  AUDIT_05_gui.md  AUDIT_09_chat_real.md  AUDIT_13_ci_actions_failure.md  AUDIT_14_no_torch_in_gui_TZ.txt
ai_studio_core/: README.md  __init__.py  env_setup.py  history_store.py  i18n.py  local_llm_client.py  output_naming.py  prosody_layer.py  requirements-core.txt  rvc_pipeline.py  settings_store.py
diffs/: STAGE_06_ui_fixes.diff  STAGE_07_i18n.diff  STAGE_08_tts_real.diff  STAGE_09_chat_real.diff  STAGE_10_platform_real.diff  STAGE_11_env_wizard.diff  STAGE_12_experience.diff  STAGE_14_no_torch_in_gui.diff  STAGE_15_cuda_isolation_crash.patch  STAGE_16_startup_isolation_switches.patch  STAGE_17_qt_handler_refcount.patch
json/: usage_stats.json
logs/: crash_dump.txt
models/: dummy.model.example.json
test/: test_ai_conductor.py  test_backend_select_real.py  test_chat_real.py  test_chunker.py  test_cpu_gpu.py  test_diag_bridge.py  test_diagnostics.py  test_diagnostics_cuda.py  test_env_core_init.py  test_env_wizard_real.py  test_espeak_backend.py  test_experience_layer.py  test_i18n_core.py  test_local_llm_client.py  test_normalizer.py  test_output_naming.py  test_qc.py  test_qt_msg_handler.py  test_release_hashing.py  (+10 more)
(+122 files in other folders)
