[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-studio-core"
version = "0.1.0"
description = "Headless AI-studio core (TTS, RVC, LLM clients, environment management) extracted from XTTS-Studio-AI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AI Studio Contributors" }]
dependencies = [
    # === ОБЯЗАТЕЛЬНЫЕ (ядро не стартует без них) ===
    "numpy>=1.24",
    "soundfile>=0.12",
    "pydub>=0.25",
    "cryptography>=41.0",
    "certifi>=2023.7",
    "num2words>=0.5",
    "psutil>=5.9",
    "py-cpuinfo>=9.0",
    "packaging>=23.0",
    "PyYAML>=6.0",
    "requests>=2.31",
    "loguru>=0.7",
    # === ОПЦИОНАЛЬНЫЕ (тяжёлые ML-зависимости) ===
    # "torch>=2.2",
    # "torchaudio>=2.2",
    # "TTS>=0.22",
    # "llama-cpp-python>=0.2",
    # "rvc-python>=0.1.5",
]

[project.optional-dependencies]
ml = [
    "torch>=2.2",
    "torchaudio>=2.2",
    "TTS>=0.22",
]
local-llm = [
    "llama-cpp-python>=0.2",
]
rvc = [
    "rvc-python>=0.1.5",
]
gui = [
    "PySide6>=6.6",
]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.2",
    "pytest-cov>=4.0",
    "ruff>=0.6",
    "black>=24.0",
    "import-linter>=2.0",
    "PySide6>=6.6",
]

[tool.setuptools.packages.find]
include = ["ai_studio_core*"]
exclude = ["test*", "tools*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",
    "E401",
    "E402",
    "E741",
    "F401",
    "F403",
    "F405",
    "F811",
    "F841",
]

[tool.pytest.ini_options]
pythonpath = ["."]
timeout = 60
testpaths = ["test"]
